# list

./: .gitignore  CMakeLists.txt  README.md  list.txt
examples/: basic_config.txt  complex_config.txt  dsp_heavy_config.txt  sharing_config.txt
include/: config.h  control_block.h  netlist_generator.h  operation.h  signal.h  verilog_emitter.h
src/: config.cpp  control_block.cpp  main.cpp  netlist_generator.cpp  operation.cpp  signal.cpp  verilog_emitter.cpp
